kubernetes/apps/pivas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pivas-service
  namespace: pivas
  labels:
    app: pivas
spec:
  type: ClusterIP
  selector:
    app: pivas
  ports:
    - name: http
      port: 4003
      targetPort: 4003
      protocol: TCP
